fix(css): backdrop-filter supports at-rule for webkit
We must add -webkit-backdrop-filter into this condition, otherwise
our backdrop style won't be visible on iOS, because webkit doesn't
support backdrop-filter without the -webkit prefix, which makes
this old condition true, then background-color is appended, then
backdrop-filter becomes invisible.

--- a/assets/scss/base/_supports.scss
+++ b/assets/scss/base/_supports.scss
@@ -1,5 +1,5 @@
 @if ($headerLayoutFlex) {
-    @supports not (backdrop-filter: none) {
+    @supports not ((backdrop-filter: none) or (-webkit-backdrop-filter: none)) {
         .header-wrapper {
             background-color: var(--color-bg);
         }
